left align fixed

--- a/src/modules/animation/animation.css
+++ b/src/modules/animation/animation.css
@@ -1,3 +1,6 @@
 .animation {
   flex: 18;
+  padding-left: 10px;
+  margin-left: -10px;
+  /*margin-right: -10px;*/
 }
