--- a/src/modules/page/page.css
+++ b/src/modules/page/page.css
@@ -19,7 +19,7 @@ button.mode {
   color: #000;
   display: block;
   outline: 0;
-  padding: 0.1em 0.2em;
+  padding: 0;
 }
 
 button.left {
